--- a/styles.css
+++ b/styles.css
@@ -11,37 +11,39 @@ body {
   background: #D6B173;
   border: #242321 solid 20px;
   margin: 0px;
-  height: inherit;
+  position: relative;
+  height: 900px;
 }
 
 header h1 {
   display: inline;
-  font-size: 3em;
+  font-size: 2.5em;
+  padding-left: 30px;
 }
 
 img {
-  width: 20%;
+  width: 30%;
 }
 
 header {
   background: #A7502C;
   padding: 20px;
-  border-radius: 30%;
+  border-radius: 50%;
   display: block;
+  height: 20%;
 }
 
 nav {
   width: 30%;
-  display: inline;
   float: right;
   margin-top: 30px;
+  border:
 }
 
 nav li {
   list-style: none;
   font-size: 1.5em;
-  display: inline;
-  padding: 10px
+  padding: 10px;
 }
 
 nav li:hover {
@@ -55,11 +57,36 @@ nav li a {
 }
 
 aside {
-  position: relative;
+  position: absolute;
+  top: 30%;
+  left: 0;
+  bottom: 20%;
   float: left;
-  width: 30%;
+  width: 20%;
+  padding: 20px;
+  border: #242321 solid 10px;
+  margin: 20px;
+  clear: both;
 }
 
+.info {
+  position: absolute;
+  left: 30%;
+  display: inline;
+}
+
+.info li {
+  padding: 5px;
+  list-style: none;
+}
+
+.merchandise {
+  float: right;
+  text-align: left;
+}
+figure {
+  display: block;
+}
 .newStoreDiv {
   display: inline;
 }
@@ -108,4 +135,18 @@ input {
   display: inline-block;
   font-weight: bold;
   vertical-align: middle;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  background-color: #A7502C;
+  height: 20%;
+  width: 100%;
+  border-top: #242321 solid 5px;
+}
+
+#footerimage {
+  height: 100%;
+  width: auto;
 }
